# zrive-ds

./: .gitignore  pyproject.toml
src/module_1/: aux_functions.py  module_1_meteo_api.py  schema.py  static_variables.py
src/module_2/: 1_problem_understanding.ipynb  1_problem_understanding.md  2_eda.ipynb  2_eda.md
src/module_3/: linear_models.ipynb  linear_models.md
src/module_5/: initial_notebook.ipynb  list_notes.ipynb  working_notebook.ipynb
tests/module_1/: test_aux_functions.py
